<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.weatherapp.ui.WeatherViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/weather_app"
            android:textColor="@color/topic_color"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/city"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_marginTop="104dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_a_city"
            android:inputType="text"
            android:text="@={viewmodel.city}"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topic" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="196dp"
            android:layout_marginEnd="36dp"
            android:onClick="@{viewmodel::onSearchButtonClick}"
            android:text="@string/search"
            android:textColor="@color/btn_text_color"
            app:backgroundTint="#000113"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="304dp"
            android:layout_height="122dp"
            android:layout_marginTop="56dp"
            android:clipToPadding="false"
            android:fadeScrollbars="true"
            android:filterTouchesWhenObscured="true"
            android:padding="4dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/w_img" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topic"
            app:layout_constraintVertical_bias="0.404" />

        <ImageView
            android:id="@+id/w_img"
            android:layout_width="63dp"
            android:layout_height="62dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@{viewmodel.temp}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.195"
            app:layout_constraintStart_toEndOf="@+id/w_img"
            app:layout_constraintTop_toBottomOf="@id/result" />

        <Spinner
            android:id="@+id/spinner"
            android:prompt = "@string/app_name"
            android:layout_width="55dp"
            android:layout_height="41dp"
            android:layout_margin="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@android:drawable/btn_dropdown"
            app:layout_constraintEnd_toStartOf="@+id/topic"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>